--- a/_posts/2014-01-02-drakes.md
+++ b/_posts/2014-01-02-drakes.md
@@ -1,7 +1,8 @@
 ---
 permalink: drakes
 published: true
-image: drakes.jpg
+cover: drakes.jpg
+backcover: drakes.jpg
 title: Drakes
 layout: post
 kobo: drakes
