--- a/_posts/2014-01-02-drakes2.md
+++ b/_posts/2014-01-02-drakes2.md
@@ -1,7 +1,8 @@
 ---
 permalink: drakes-the-five-eyes
 published: true
-image: drakes2.jpg
+cover: drakes2.jpg
+backcover: drakes5eyes.jpg
 title: Drakes - The Five Eyes
 layout: post
 kobo: drakes-the-five-eyes
