--- a/_posts/2014-01-02-drakes3.md
+++ b/_posts/2014-01-02-drakes3.md
@@ -1,7 +1,7 @@
 ---
 permalink: drakes-heroes-and-villains
 published: true
-image: drakes3.jpg
+cover: drakes3.jpg
 title: Drakes - Heroes and Villains
 layout: post
 kobo: drakes-heroes-and-villains
