--- a/_posts/2014-01-02-drakes3.md
+++ b/_posts/2014-01-02-drakes3.md
@@ -1,6 +1,6 @@
 ---
 permalink: drakes-heroes-and-villains
-published: true
+released: true
 cover: drakes3.jpg
 title: Drakes - Heroes and Villains
 layout: post
