--- a/_posts/2014-01-02-drakes2.md
+++ b/_posts/2014-01-02-drakes2.md
@@ -1,6 +1,6 @@
 ---
 permalink: drakes-the-five-eyes
-published: true
+released: true
 cover: drakes2.jpg
 backcover: drakes5eyes.jpg
 title: Drakes - The Five Eyes
